--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -14,8 +14,6 @@ section .title:after {
 	height: 1px;
 }
 
-/* Section Experience  */
-
 .information .shell {
 	align-items: flex-start;
 }
@@ -69,7 +67,6 @@ section .title:after {
 	left: 0;
 }
 
-/*SKILLS*/
 #interests span,
 #skills span {
 	padding: 8px 16px;
@@ -79,4 +76,22 @@ section .title:after {
 	font-family: 'cabinregular';
 	margin: 4px;
 	box-shadow: 0 5px 4px -2px rgba(0, 0, 0, 0.5);
+	transition: 0.3s;
+	cursor: pointer;
+}
+
+#skills span:hover,
+#interests span:hover {
+	transform: scale(1.1);
+	background: #134562;
+}
+
+#interests {
+	margin-bottom: 20px;
+}
+
+.info-panel {
+	background-color: rgb(236, 236, 236);
+	border-radius: 5px;
+	box-shadow: 0 5px 2px -2px rgba(0, 0, 0, 0.25);
 }
