--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -26,3 +26,62 @@ header .avatar img {
     box-sizing: border-box;
     border: 8px solid #3e3e3e;
 }
+
+@media only screen and (max-width: 1200px) {
+    header .avatar img {
+        max-width: 150px;
+        border: 4px solid #3e3e3e;
+    }
+
+    header > .shell > .f-item:nth-child(1) {
+        order: 2;
+    }
+
+    header > .shell > .f-item:nth-child(2) {
+        order: 1;
+    }
+
+    header > .shell > .f-item:nth-child(3) {
+        flex-basis: 100%;
+        order: 3;
+    }
+
+    header .main-contacts {
+        text-align: center;
+        margin-top: 25px;
+        background-color: rgb(236, 236, 236);
+        padding: 10px;
+        border-radius: 5px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    header .main-contacts > li {
+        display: flex;
+        flex-flow: column;
+        padding: 10px;
+    }
+
+    header .main-contacts > li > i {
+        order: 1
+    }
+
+    header .main-contacts > li > a,
+    header .main-contacts > li > span  {
+        order: 2
+    }
+}
+
+@media only screen and (max-width: 560px) {
+
+    header .avatar {
+        margin-bottom: 20px;
+    }
+
+    header > .shell > .f-item:nth-child(1),
+    header > .shell > .f-item:nth-child(2) {
+        flex-basis: 100%;
+        text-align: center;
+    }
+}
